# duckpools-coinflip

./: .env.example  .gitignore  .gitleaks.toml  .pm2ignore  AGENTS.md  AGENT_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRACT_AUDITOR_STATUS.md  CONTRACT_AUDIT_REPORT_2026-03-27.md  CONTRIBUTING.md  CSP-PRODUCTION-HARDENING.md  CSP_PRODUCTION_HARDENING.md  DEPLOYMENT.md  DOCKER.md  DOCUMENTATION_SUMMARY.md  E2E-Test-Report-MAT-69.md  GITHUB_SETUP.md  IMPLEMENTATION_NOTES_MAT268.md  LICENSE  LOAD_TESTING_QUICKSTART.md  MAT-218-VERIFICATION-RESULTS.md  MAT-250-plinko-symmetry-investigation.md  Makefile  NAUTILUS_WALLET_HOOK.md  PENDING_BET_AUDIT.md  PM2_IMPLEMENTATION_SUMMARY.md  PM2_SETUP.md  PR_LINKS.md  QA_TEAM_AVAILABILITY.md  README.md  README.md.bak2  README.md.bak3  README.md.bak4  README_DOCKER_SECTION.md  README_GITHUB.md  README_MAT-268.md  ROADMAP.md  ROADMAP_PROPOSAL_2026.md  (+43 more)
.github/: SECURITY_SCANNING.md  pull_request_template.md
agents/: Accessibility-Tester-AGENTS.md  Backend-Engineer-AGENTS.md  CEO-AGENTS.md  Compliance-Officer-AGENTS.md  Data-Engineer-AGENTS.md  DeFi-Architect-Sr-AGENTS.md  DevOps-Engineer-AGENTS.md  EM-Backend-Manager-AGENTS.md  EM-Coinflip-Engineer-AGENTS.md  EM-Data-Analytics-Manager-AGENTS.md  EM-DeFi-Engineer-AGENTS.md  EM-DevOps-Engineer-AGENTS.md  EM-DevOps-Manager-AGENTS.md  EM-Development-Manager-AGENTS.md  EM-Engineering-Manager-AGENTS.md  EM-Frontend-Manager-AGENTS.md  EM-Infrastructure-Engineer-AGENTS.md  EM-Market-Research-Manager-AGENTS.md  EM-Market-Researcher-AGENTS.md  EM-QA-Engineer-AGENTS.md  (+65 more)
(+577 files in other folders)
